--- a/sobre.html
+++ b/sobre.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>	
 <html>			
     <head>					
-        <meta charset="utf-8">					
+        <meta charset="utf-8">	
+        <meta name="viewport" content="device=device-widht">				
         <title>Sobre a Mirror Fashion</title>
         <link rel="stylesheet" href="css/sobre.css">			
     </head>			
