--- a/produto.html
+++ b/produto.html
@@ -6,6 +6,7 @@
       <title>Mirror Fashion</title>
       <link rel="stylesheet" href="/css/reset.css">
       <link rel="stylesheet" href="/css/style.css">
+      <link rel="stylesheet" href="/css/produto.css">
   </head>
   <body>
     <header>
