--- a/checkout.html
+++ b/checkout.html
@@ -35,6 +35,52 @@
                 </dl>
               </div>
             </div>
+            <form>
+              <fieldset>
+                <legend>Dados Pessoais</legend>
+                <div class="form-group">
+                  <label for="nome">Nome completo</label>
+                  <input type="text" class="form-control" id="nome" name="nome" autofocus>
+                </div>
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="email" class="form-control" id="email" name="email" placeholder="email@exempo.com">
+                </div>
+                <div class="form-group">
+                  <label for="cpf">CPF</label>
+                  <input type="text" class="form-control" id="cpf" name="cpf" placeholder="000.000.000-00">
+                </div>
+                <div class="form-group custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="newsletter" value="sim" checked>
+                  <label class="custom-control-label" for="newsletter">
+                    Quero receber Newsletter da Mirror Fashion 
+                  </label>
+                </div> 
+              </fieldset>
+              <fieldset>
+                <legend>Cartão de crédito</legend>
+                <div class="form-group">
+                  <label for="numero-cartao">Número - CVV</label>
+                  <input type="text" class="form-control" id="numero-cartao" name="numero-cartao">
+                </div>
+                <div class="form-group">
+                  <label for="bandeira-cartao">Bandeira</label>
+                  <select class="custom-select" id="bandeira-cartao">
+                    <option disabled selected>Selecione uma opção...</option>
+                    <option value="master">MasterCard</option>
+                    <option value="visa">VISA</option>
+                    <option value="amex">American Express</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="validade-cartao">Validade</label>
+                  <input type="month" class="form-control" id="validade-cartao" name="validade-cartao">
+                </div>
+              </fieldset>
+              <button type="submit" class="btn btn-primary">
+                Confirmar Pedido
+              </button>
+            </form>
           </div>
     
       
