--- a/checkout.html
+++ b/checkout.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width">
     <title>Checkout Mirror Fashion</title>
     <link rel="stylesheet" href="./css/bootstrap.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="./css/open-iconic-bootstrap.css">
+    <style>
+      .form-control:invalid {
+        border: 1px solid #CC0000;
+      }
+    </style>
   </head>
   <body>
     
@@ -40,15 +45,22 @@
                 <legend>Dados Pessoais</legend>
                 <div class="form-group">
                   <label for="nome">Nome completo</label>
-                  <input type="text" class="form-control" id="nome" name="nome" autofocus>
+                  <input type="text" class="form-control" id="nome" name="nome" autofocus required>
                 </div>
                 <div class="form-group">
                   <label for="email">Email</label>
-                  <input type="email" class="form-control" id="email" name="email" placeholder="email@exempo.com">
+
+                  <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">@</span>
+                    </div>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="email@exempo.com">
+                  </div>
+                  
                 </div>
                 <div class="form-group">
                   <label for="cpf">CPF</label>
-                  <input type="text" class="form-control" id="cpf" name="cpf" placeholder="000.000.000-00">
+                  <input type="text" class="form-control" id="cpf" name="cpf" placeholder="000.000.000-00" required>
                 </div>
                 <div class="form-group custom-control custom-checkbox">
                   <input type="checkbox" class="custom-control-input" id="newsletter" value="sim" checked>
@@ -64,20 +76,26 @@
                   <input type="text" class="form-control" id="numero-cartao" name="numero-cartao">
                 </div>
                 <div class="form-group">
-                  <label for="bandeira-cartao">Bandeira</label>
-                  <select class="custom-select" id="bandeira-cartao">
-                    <option disabled selected>Selecione uma opção...</option>
-                    <option value="master">MasterCard</option>
-                    <option value="visa">VISA</option>
-                    <option value="amex">American Express</option>
-                  </select>
+
+                  <div class="input-group mb-3">
+                    <div class="input-group prepend">
+                      <label class="input-group-text" for="bandeira-cartao">Bandeira</label>
+                    </div>                    
+                    <select class="custom-select" id="bandeira-cartao">
+                      <option disabled selected>Selecione uma opção...</option>
+                      <option value="master">MasterCard</option>
+                      <option value="visa">VISA</option>
+                      <option value="amex">American Express</option>
+                    </select>
+                  </div>
                 </div>
                 <div class="form-group">
                   <label for="validade-cartao">Validade</label>
                   <input type="month" class="form-control" id="validade-cartao" name="validade-cartao">
                 </div>
               </fieldset>
-              <button type="submit" class="btn btn-primary">
+              <button type="submit" class="btn btn-primary btn-lg">
+                <span class="oi oi-thumb-up"></span>
                 Confirmar Pedido
               </button>
             </form>
