--- a/produto.html
+++ b/produto.html
@@ -46,6 +46,7 @@
             <fieldset>
               <legend>Escolha o tamanho:</legend>
               <input type="range" min="36" max="46" value="42" step="2" name="tamanho" id="tamanho">
+              <output for="tamanho" name="valortamanho">42</output>
             </fieldset>
               <button class="comprar">Comprar</button>
           </form>
@@ -93,5 +94,6 @@
           </ul>
       </div>
     </footer>
+    <script src="js/produto.js"></script>
   </body>
 </html>
