--- a/checkout.html
+++ b/checkout.html
@@ -65,11 +65,26 @@
                       <dt>Tamanho</dt>
                       <dd>40</dd>
                       <dt>Preço</dt>
-                      <dd>R$ 129,90</dd>
+                      <dd id="preco">R$ 129,90</dd>
                     </dl>
                   </div>
               </div>
+              <div class="card mb-3">
+                <div class="card-body">
+
+                  <div class="form-group">
+                    <label for="qtd">Quantidade</label>
+                    <input type="number" id="qth" min="1" max="99" value="1" class="form-control">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="total">Total:</label>
+                    <output id="total" class="form-control">R$129,90</output>
+                  </div>
+
+                </div>
               </div>
+            </div>
               <form class="col-md-8 col-xl-9">
                 <div class="row">
                   <fieldset class="col-lg-6">
