--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
          <section class="banner-destaque">
             <figure>
                 <img src="img/destaque-home.png" alt="Promoção: Big City Night">
+                <a href="#" class="pause"></a>
             </figure>
          </section>
          <!-- Fim .banner-destaque-->
@@ -209,5 +210,6 @@
             </ul>
         </div>
      </footer>
+     <script src="/js/banner.js"></script>
 </body>
 </html>
