--- a/checkout.html
+++ b/checkout.html
@@ -148,6 +148,7 @@
           </div>
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script type="text/javascript" src="js/total.js"></script>
       
   </body>
 </html>
