--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- fim .container destaque -->
      <div class="container paineis">
         <!-- os paineis de novidades e mais vendidos estrarão aqui dentro -->
-        <section class="painel novidades">
+        <section class="painel novidades painel-aberto">
             <h2>Novidades</h2>
             <ol>
                 <!-- primeiro porduto -->
@@ -136,10 +136,65 @@
                     </a>
                 </li>
                 <!-- fim do sexto produto-->
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="img/produtos/miniatura13.png" alt="miniatura13">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+                <!-- fim do setimo produto -->
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="img/produtos/miniatura14.png" alt="miniatura14">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+                <!-- fim do oitavo produto-->
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="img/produtos/miniatura15.png" alt="miniatura15">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+                <!-- fim do nono produto-->
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="img/produtos/miniatura1.png" alt="miniatura1">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+                <!-- fim do decimo produto-->
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="img/produtos/miniatura2.png" alt="miniatura2">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+                <!-- fim do decimo primeiro produto-->
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="img/produtos/miniatura3.png" alt="miniatura3">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+                <!-- fim do decimo segundo produto-->
             </ol>
+            <button type="button">Mostrar mais</button>
         </section>
 
-        <section class="painel mais-vendidos">
+        <section class="painel-aberto painel mais-vendidos">
             <h2>Mais Vendidos</h2>
             <ol>
                 <li>
@@ -195,7 +250,62 @@
                         </figure>
                     </a>
                 </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="img/produtos/miniatura4.png" alt="miniatura4">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="img/produtos/miniatura5.png" alt="miniatura5">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="img/produtos/miniatura6.png" alt="miniatura6">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="img/produtos/miniatura7.png" alt="miniatura7">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="img/produtos/miniatura8.png" alt="miniatura8">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="img/produtos/miniatura9.png" alt="miniatura9">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
             </ol>
+            <button type="button">Mostrar mais</button>
         </section>
      </div>
      <!-- fim .container paineis-->
@@ -210,6 +320,9 @@
             </ul>
         </div>
      </footer>
+     <script src="/js/jquery.js"></script>
+     <script src="js/home.js"></script>
      <script src="/js/banner.js"></script>
+     
 </body>
 </html>
