--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <button type="button">Mostrar mais</button>
         </section>
 
-        <section class="painel-aberto painel mais-vendidos">
+        <section class="painel mais-vendidos" class="painel-aberto">
             <h2>Mais Vendidos</h2>
             <ol>
                 <li>
@@ -323,6 +323,7 @@
      <script src="/js/jquery.js"></script>
      <script src="js/home.js"></script>
      <script src="/js/banner.js"></script>
+     
      
 </body>
 </html>
