--- a/sobre.html
+++ b/sobre.html
@@ -22,7 +22,7 @@
         </header>
                 <article>
                     <h1>A	Mirror	Fashion</h1>
-                    <p>	A	<strong>Mirror	Fashion</strong>	é a maior	empresa de	comércio	eletrônico no	segmento	de	moda em	todo	o	 mundo.	Fundada em 1932, possui filiais em 124 países,	sendo	líder de		mercado	com	mais	de	90%	de participação	em 118	 deles.	</p>
+                    <p>	A	<strong>Mirror	Fashion</strong>	é a maior	empresa de	comércio	eletrônico no	segmento	de	moda em	todo	o	 mundo.	<iframe width="560" height="315" src="https://www.youtube.com/embed/Tb06abHE4hY?si=JkfwWu557FROg2G7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>Fundada em 1932, possui filiais em 124 países,	sendo	líder de		mercado	com	mais	de	90%	de participação	em 118	 deles.	</p>
                     
                     <p>	Nosso	centro 	de distribuição fica em	<a href="https://maps.google.com.br/?q=Jacarezinho">Jacarezinho,	no	Paraná</a>.	De	lá,	saem	48	aviões	 que	distribuem	nossos	 produtos	às casas	do mundo	todo.	Nosso	centro	 de distribuição:</p>
                             <section>
