--- a/sobre.html
+++ b/sobre.html
@@ -22,9 +22,11 @@
         </header>
                 <article>
                     <h1>A	Mirror	Fashion</h1>
-                    <p>	A	<strong>Mirror	Fashion</strong>	é a maior	empresa de	comércio	eletrônico no	segmento	de	moda em	todo	o	 mundo.	<iframe width="560" height="315" src="https://www.youtube.com/embed/Tb06abHE4hY?si=JkfwWu557FROg2G7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>Fundada em 1932, possui filiais em 124 países,	sendo	líder de		mercado	com	mais	de	90%	de participação	em 118	 deles.	</p>
+                    <p>	A	<strong>Mirror	Fashion</strong>	é a maior	empresa de	comércio	eletrônico no	segmento	de	moda em	todo	o	 mundo.	Fundada em 1932, possui filiais em 124 países,	sendo	líder de		mercado	com	mais	de	90%	de participação	em 118	 deles.	</p>
+
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Tb06abHE4hY?si=JkfwWu557FROg2G7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     
-                    <p>	Nosso	centro 	de distribuição fica em	<a href="https://maps.google.com.br/?q=Jacarezinho">Jacarezinho,	no	Paraná</a>.	De	lá,	saem	48	aviões	 que	distribuem	nossos	 produtos	às casas	do mundo	todo.	Nosso	centro	 de distribuição:</p>
+                    <p>	Nosso	centro 	de distribuição fica em	<a href="https://maps.google.com.br/?q=Jacarezinho">Jacarezinho,	no	Paraná</a><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4079777269444!2d-46.637213025712484!3d-23.589697062631846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5bd9bb943bf5%3A0x6f642995c970f0fe!2scaelum%20alura!5e0!3m2!1spt-BR!2sbr!4v1724870447632!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>.	De	lá,	saem	48	aviões	 que	distribuem	nossos	 produtos	às casas	do mundo	todo.	Nosso	centro	 de distribuição:</p>
                             <section>
                                 <figure id="centro-distribuicao">
                     <img src="img/centro-distribuicao.png" alt="Foto do centro de distribuiçãoda Mirror Fashion">
