--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Mirror Fashion</title>
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.less">
     <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=PT+Sans|Bad+Script'>
 </head>
 <body>
@@ -324,6 +324,7 @@
      <script src="/js/jquery.js"></script>
      <script src="js/home.js"></script>
      <script src="/js/banner.js"></script>
+     <script src="js/less.js"></script>
      
      
 </body>
