--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Mirror Fashion</title>
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.less">
+    <link rel="stylesheet" href="/less/style.less">
     <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=PT+Sans|Bad+Script'>
 </head>
 <body>
